samples/_failures_safe/1761192154_b021cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_426b2d9e.c: In function ‘main’:
./samples/SAFE/__tmp_426b2d9e.c:141:11: error: expected ‘;’ at end of input
  141 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_426b2d9e.c:141:5: error: expected declaration or statement at end of input
  141 |     printf
      |     ^~~~~~
